# app-policy-auditor

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
app_policy_auditor/: __init__.py  cli.py
app_policy_auditor/discovery/: web.py
app_policy_auditor/fetch/: cache.py  http.py
docs/: ARCHITECTURE.md
examples/: seed_targets.txt
