[project]
name = "app-policy-auditor"
version = "0.1.0a1"
description = "Audit privacy policies and EULAs for risky clauses"
authors = [{ name = "Alex Perreira" }]
requires-python = ">=3.10"
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "typer>=0.12",
    "requests>=2.32",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "readability-lxml>=0.8",
    "trafilatura>=1.7",
    "pdfminer.six>=20240706",
    "PyYAML>=6.0",
    "pandas>=2.2",
    "tqdm>=4.66",
    "openai>=1.51"
]

[project.urls]
Homepage = "https://github.com/alexperreira/app-policy-auditor"

[project.scripts]
apa = "app_policy_auditor.cli:app"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = "-q"